# path-engineering-nlp-62d0

./: README.md  REPORT.md  planning.md  pyproject.toml
.idea-explorer/: idea.yaml
logs/: session_instructions.txt
notebooks/: 2025-11-16-22-55_PathEngineering.ipynb
results/: experiment_results.json  results.csv
