[project]
name = "path-engineering-research"
version = "0.1.0"
description = "Research workspace for path engineering in language models"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
